--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "4.1.0",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
@@ -64,7 +64,7 @@
     "@react-three/drei": "latest"
   },
   "devDependencies": {
-    "@types/node": "^22",
+    "@types/node": "^18",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
